# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check-project.yml
gendiff/: __init__.py  core.py  main.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: diff.py  gendiff.py  generate_diff.py  make_diff.py  make_diff_view.py  prepare.py
tests/: test_gendiff.py
tests/test_data/: data1.json  data1.yaml  json.txt  plain.txt  stylish.txt
