[project]
author = "Скляров Александр"
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "coverage==7.11.0",
    "pytest-cov==7.0.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
